2010-05-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionDataList.cs: fixed
	  warning/removed unecessary method.

2010-05-11  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.CodeCompletion/DisplayFlags.cs:
	* MonoDevelop.Ide.CodeCompletion/CompletionData.cs:
	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs:
	* MonoDevelop.Ide.CodeCompletion/ICompletionData.cs:
	* MonoDevelop.Ide.CodeCompletion/CompletionDataList.cs:
	* MonoDevelop.Ide.CodeCompletion/CompletionCategory.cs:
	* MonoDevelop.Ide.CodeCompletion/MemberCompletionData.cs:
	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	* MonoDevelop.Ide.CodeCompletion/IMemberCompletionData.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateCompletionData.cs:
	  Made the code completion system a more consistent (Removed
	  interfaces, provided common base class - easier to extend),
	  ActionCompletionData in conjunction with completion history
	  now works correctly. Custom CompletionData now has access to
	  the list window as well (Required for more complex insert
	  actions).

2010-05-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs: filter
	  matches.

2010-05-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs:
	  disabled the ListWidget.Matches usage.

2010-05-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs: When
	  converting an acronym match to a substring match, include
	  the original acronym char in the current substring. Fixes
	  bug #485376 - Go-to-file acronym matching inconsistent.

2010-05-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Docking/DockGroup.cs: In
	  RestoreAllocation, make a copy of the items list because
	  RestoreAllocation can fire events such as VisibleChanged,
	  and subscribers may do changes in the list. Should fix bug